Fixed spacing of slider bar paragraph span
Also changed width of slider container to make slider longer

--- a/Sorting Visualizer/sorting.css
+++ b/Sorting Visualizer/sorting.css
@@ -1,5 +1,5 @@
 .slidecontainer {
-    width: 10%; /* Width of the outside container */
+    width: 15%; /* Width of the outside container */
     display: flex;
     align-items: center;
     justify-content: space-between;
